# aio-pvpc

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  run_tests.yml
aio_pvpc/: pvpc_data.py  pvpc_tariff.py  utils.py
esios_api/: const.py  parser.py  pvpc_data.py
tests/: __init__.py  conftest.py  test_ha_helpers.py  test_pvpc.py  test_pvpc_parsing.py  test_pvpc_zones.py  test_real_api_calls.py  test_tariff_attributes.py
