[project]
name = "aio-pvpc"
version = "4.4.0"
requires-python = ">= 3.10"

description = "Retrieval of Spanish Electricity hourly prices (PVPC)"
keywords = ["pvpc", "Precio Voluntario para el Pequeño Consumidor"]
authors = [
    { name = "Eugenio Panadero", email = "eugenio.panadero@gmail.com" },
    { name = "Álvaro Gutiérrez Romero", email = "chiro79@gmail.com" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "aiohttp>=3.13.5",
]

[project.urls]
Homepage = "https://github.com/chiro79/aio-pvpc"
Repository = "https://github.com/chiro79/aio-pvpc"

[build-system]
requires = ["poetry_core>=2.4.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-sugar>=1.1.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.6.0",
]

[tool.ruff]
target-version = "py311"
fix = true
line-length = 120

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "B", "BLE", "C", "C4", "E", "F", "FA", "I", "INT", "N", "PIE", "PTH", "RUF", "SIM", "TCH", "TD", "W", "YTT"]
ignore = ["B008", "B904", "B905", "TD002", "TD003", "TD004", "RUF012"]

[tool.ruff.lint.isort]
order-by-type = false

[tool.coverage.run]
branch = true
source = ["aio_pvpc"]

[tool.coverage.paths]
source = ["aio_pvpc/"]

[tool.coverage.report]
fail_under = 95
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = 6.0
testpaths = "tests"
addopts = "-vv -s --cov --cov-report term --cov-report html -m 'not real_api_call'"
log_level = "INFO"
log_format = "%(asctime)s.%(msecs)03d %(levelname)s: (%(filename)s:%(lineno)s): %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_format = "%(asctime)s.%(msecs)03d %(name)s: %(lineno)s %(levelname)s: %(message)s"
log_cli_level = "INFO"
log_cli_date_format = "%H:%M:%S"
markers = [
    "real_api_call: Tests making requests to api.esios.ree.es (deselected by default)",
]

